examples/errors/assign_to_const_field/main.lc

class A {
	static const F = "F"
}

function main() {
	A.F = "B";
	print(A.F);
}
